// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should defaultNpmScriptsOrder 1`] = `
Object {
  "build": "16",
  "ci": "14",
  "coverage": "21",
  "dev": "24",
  "install": "18",
  "lerna": "11",
  "link": "15",
  "lint": "20",
  "npm": "13",
  "pack": "6",
  "postpack": "5",
  "postpublish": "3",
  "postpublishOnly": "2",
  "prepack": "7",
  "prepare": "9",
  "prepublish": "10",
  "prepublishOnly": "8",
  "publish": "4",
  "restart": "23",
  "shrinkwrap": "1",
  "start": "25",
  "stop": "22",
  "test": "19",
  "uninstall": "17",
  "version": "0",
  "yarn": "12",
}
`;

exports[`should defaultNpmScriptsOrder 2`] = `
Array [
  "start",
  "dev",
  "restart",
  "stop",
  "coverage",
  "lint",
  "test",
  "install",
  "uninstall",
  "build",
  "link",
  "ci",
  "npm",
  "yarn",
  "lerna",
  "prepublish",
  "prepare",
  "prepublishOnly",
  "prepack",
  "pack",
  "postpack",
  "publish",
  "postpublish",
  "postpublishOnly",
  "shrinkwrap",
  "version",
]
`;

exports[`should defaultNpmScriptsOrder 3`] = `
"{
  \\"start\\": \\"25\\",
  \\"dev\\": \\"24\\",
  \\"restart\\": \\"23\\",
  \\"stop\\": \\"22\\",
  \\"coverage\\": \\"21\\",
  \\"lint\\": \\"20\\",
  \\"test\\": \\"19\\",
  \\"install\\": \\"18\\",
  \\"uninstall\\": \\"17\\",
  \\"build\\": \\"16\\",
  \\"link\\": \\"15\\",
  \\"ci\\": \\"14\\",
  \\"npm\\": \\"13\\",
  \\"yarn\\": \\"12\\",
  \\"lerna\\": \\"11\\",
  \\"prepublish\\": \\"10\\",
  \\"prepare\\": \\"9\\",
  \\"prepublishOnly\\": \\"8\\",
  \\"prepack\\": \\"7\\",
  \\"pack\\": \\"6\\",
  \\"postpack\\": \\"5\\",
  \\"publish\\": \\"4\\",
  \\"postpublish\\": \\"3\\",
  \\"postpublishOnly\\": \\"2\\",
  \\"shrinkwrap\\": \\"1\\",
  \\"version\\": \\"0\\"
}"
`;

exports[`should defaultNpmScriptsOrder 4`] = `
Object {
  "build": "9",
  "ci": "11",
  "coverage": "4",
  "dev": "1",
  "install": "7",
  "lerna": "14",
  "link": "10",
  "lint": "5",
  "npm": "12",
  "pack": "19",
  "postpack": "20",
  "postpublish": "22",
  "postpublishOnly": "23",
  "prepack": "18",
  "prepare": "16",
  "prepublish": "15",
  "prepublishOnly": "17",
  "publish": "21",
  "restart": "2",
  "shrinkwrap": "24",
  "start": "0",
  "stop": "3",
  "test": "6",
  "uninstall": "8",
  "version": "25",
  "yarn": "13",
}
`;

exports[`should defaultNpmScriptsOrder 5`] = `
Array [
  "start",
  "dev",
  "restart",
  "stop",
  "coverage",
  "lint",
  "test",
  "install",
  "uninstall",
  "build",
  "link",
  "ci",
  "npm",
  "yarn",
  "lerna",
  "prepublish",
  "prepare",
  "prepublishOnly",
  "prepack",
  "pack",
  "postpack",
  "publish",
  "postpublish",
  "postpublishOnly",
  "shrinkwrap",
  "version",
]
`;

exports[`should defaultNpmScriptsOrder 6`] = `
"{
  \\"start\\": \\"0\\",
  \\"dev\\": \\"1\\",
  \\"restart\\": \\"2\\",
  \\"stop\\": \\"3\\",
  \\"coverage\\": \\"4\\",
  \\"lint\\": \\"5\\",
  \\"test\\": \\"6\\",
  \\"install\\": \\"7\\",
  \\"uninstall\\": \\"8\\",
  \\"build\\": \\"9\\",
  \\"link\\": \\"10\\",
  \\"ci\\": \\"11\\",
  \\"npm\\": \\"12\\",
  \\"yarn\\": \\"13\\",
  \\"lerna\\": \\"14\\",
  \\"prepublish\\": \\"15\\",
  \\"prepare\\": \\"16\\",
  \\"prepublishOnly\\": \\"17\\",
  \\"prepack\\": \\"18\\",
  \\"pack\\": \\"19\\",
  \\"postpack\\": \\"20\\",
  \\"publish\\": \\"21\\",
  \\"postpublish\\": \\"22\\",
  \\"postpublishOnly\\": \\"23\\",
  \\"shrinkwrap\\": \\"24\\",
  \\"version\\": \\"25\\"
}"
`;

exports[`should defaultNpmScriptsOrder v2 1`] = `
Object {
  "build": "16",
  "ci": "14",
  "coverage": "21",
  "dev": "24",
  "install": "18",
  "lerna": "11",
  "link": "15",
  "lint": "20",
  "npm": "13",
  "pack": "6",
  "postbuild": "16",
  "postci": "14",
  "postcoverage": "21",
  "postdev": "24",
  "postinstall": "18",
  "postlerna": "11",
  "postlink": "15",
  "postlint": "20",
  "postnpm": "13",
  "postpack": "6",
  "postprepack": "7",
  "postprepare": "9",
  "postprepublish": "10",
  "postprepublishOnly": "8",
  "postpublish": "4",
  "postpublishOnly": "2",
  "postrestart": "23",
  "postshrinkwrap": "1",
  "poststart": "25",
  "poststop": "22",
  "posttest": "19",
  "postuninstall": "17",
  "postversion": "0",
  "postyarn": "12",
  "prebuild": "16",
  "preci": "14",
  "precoverage": "21",
  "predev": "24",
  "preinstall": "18",
  "prelerna": "11",
  "prelink": "15",
  "prelint": "20",
  "prenpm": "13",
  "prepack": "7",
  "prepare": "9",
  "prepostpack": "5",
  "prepostpublish": "3",
  "prepostpublishOnly": "2",
  "prepublish": "10",
  "prepublishOnly": "8",
  "prerestart": "23",
  "preshrinkwrap": "1",
  "prestart": "25",
  "prestop": "22",
  "pretest": "19",
  "preuninstall": "17",
  "preversion": "0",
  "preyarn": "12",
  "publish": "4",
  "restart": "23",
  "shrinkwrap": "1",
  "start": "25",
  "stop": "22",
  "test": "19",
  "uninstall": "17",
  "version": "0",
  "yarn": "12",
}
`;

exports[`should defaultNpmScriptsOrder v2 2`] = `
Array [
  "prestart",
  "start",
  "poststart",
  "predev",
  "dev",
  "postdev",
  "prerestart",
  "restart",
  "postrestart",
  "prestop",
  "stop",
  "poststop",
  "precoverage",
  "coverage",
  "postcoverage",
  "prelint",
  "lint",
  "postlint",
  "pretest",
  "test",
  "posttest",
  "preinstall",
  "install",
  "postinstall",
  "preuninstall",
  "uninstall",
  "postuninstall",
  "prebuild",
  "build",
  "postbuild",
  "prelink",
  "link",
  "postlink",
  "preci",
  "ci",
  "postci",
  "prenpm",
  "npm",
  "postnpm",
  "preyarn",
  "yarn",
  "postyarn",
  "prelerna",
  "lerna",
  "postlerna",
  "prepublish",
  "postprepublish",
  "prepare",
  "postprepare",
  "prepublishOnly",
  "postprepublishOnly",
  "prepack",
  "postprepack",
  "pack",
  "postpack",
  "prepostpack",
  "publish",
  "postpublish",
  "prepostpublish",
  "prepostpublishOnly",
  "postpublishOnly",
  "preshrinkwrap",
  "shrinkwrap",
  "postshrinkwrap",
  "preversion",
  "version",
  "postversion",
]
`;

exports[`should defaultNpmScriptsOrder v2 3`] = `
"{
  \\"prestart\\": \\"25\\",
  \\"start\\": \\"25\\",
  \\"poststart\\": \\"25\\",
  \\"predev\\": \\"24\\",
  \\"dev\\": \\"24\\",
  \\"postdev\\": \\"24\\",
  \\"prerestart\\": \\"23\\",
  \\"restart\\": \\"23\\",
  \\"postrestart\\": \\"23\\",
  \\"prestop\\": \\"22\\",
  \\"stop\\": \\"22\\",
  \\"poststop\\": \\"22\\",
  \\"precoverage\\": \\"21\\",
  \\"coverage\\": \\"21\\",
  \\"postcoverage\\": \\"21\\",
  \\"prelint\\": \\"20\\",
  \\"lint\\": \\"20\\",
  \\"postlint\\": \\"20\\",
  \\"pretest\\": \\"19\\",
  \\"test\\": \\"19\\",
  \\"posttest\\": \\"19\\",
  \\"preinstall\\": \\"18\\",
  \\"install\\": \\"18\\",
  \\"postinstall\\": \\"18\\",
  \\"preuninstall\\": \\"17\\",
  \\"uninstall\\": \\"17\\",
  \\"postuninstall\\": \\"17\\",
  \\"prebuild\\": \\"16\\",
  \\"build\\": \\"16\\",
  \\"postbuild\\": \\"16\\",
  \\"prelink\\": \\"15\\",
  \\"link\\": \\"15\\",
  \\"postlink\\": \\"15\\",
  \\"preci\\": \\"14\\",
  \\"ci\\": \\"14\\",
  \\"postci\\": \\"14\\",
  \\"prenpm\\": \\"13\\",
  \\"npm\\": \\"13\\",
  \\"postnpm\\": \\"13\\",
  \\"preyarn\\": \\"12\\",
  \\"yarn\\": \\"12\\",
  \\"postyarn\\": \\"12\\",
  \\"prelerna\\": \\"11\\",
  \\"lerna\\": \\"11\\",
  \\"postlerna\\": \\"11\\",
  \\"prepublish\\": \\"10\\",
  \\"postprepublish\\": \\"10\\",
  \\"prepare\\": \\"9\\",
  \\"postprepare\\": \\"9\\",
  \\"prepublishOnly\\": \\"8\\",
  \\"postprepublishOnly\\": \\"8\\",
  \\"prepack\\": \\"7\\",
  \\"postprepack\\": \\"7\\",
  \\"pack\\": \\"6\\",
  \\"postpack\\": \\"6\\",
  \\"prepostpack\\": \\"5\\",
  \\"publish\\": \\"4\\",
  \\"postpublish\\": \\"4\\",
  \\"prepostpublish\\": \\"3\\",
  \\"prepostpublishOnly\\": \\"2\\",
  \\"postpublishOnly\\": \\"2\\",
  \\"preshrinkwrap\\": \\"1\\",
  \\"shrinkwrap\\": \\"1\\",
  \\"postshrinkwrap\\": \\"1\\",
  \\"preversion\\": \\"0\\",
  \\"version\\": \\"0\\",
  \\"postversion\\": \\"0\\"
}"
`;

exports[`should script lifecycle 1`] = `
Object {
  "_myscript": "echo _myscript 27.2",
  "_myscript_": "echo _myscript_ 28.2",
  "build": "echo build 9.2",
  "ci": "echo ci 11.2",
  "coverage": "echo coverage 4.2",
  "dev": "echo dev 1.2",
  "install": "echo install 7.2",
  "lerna": "echo lerna 14.2",
  "link": "echo link 10.2",
  "lint": "echo lint 5.2",
  "myscript": "echo myscript 30.2",
  "myscript:abc": "echo myscript:abc 30.2",
  "myscript_": "echo myscript_ 29.2",
  "npm": "echo npm 12.2",
  "pack": "echo pack 20.2",
  "pare": "echo pare 16.2",
  "post_myscript": "echo post_myscript 27.3",
  "post_myscript_": "echo post_myscript_ 28.3",
  "postbuild": "echo postbuild 9.3",
  "postci": "echo postci 11.3",
  "postcoverage": "echo postcoverage 4.3",
  "postdev": "echo postdev 1.3",
  "postinstall": "echo postinstall 7.3",
  "postlerna": "echo postlerna 14.3",
  "postlink": "echo postlink 10.3",
  "postlint": "echo postlint 5.3",
  "postmyscript": "echo postmyscript 30.3",
  "postmyscript:abc": "echo postmyscript:abc 30.3",
  "postmyscript_": "echo postmyscript_ 29.3",
  "postnpm": "echo postnpm 12.3",
  "postpack": "echo postpack 20.2",
  "postpare": "echo postpare 16.3",
  "postpostpack": "echo postpostpack 20.3",
  "postpostpublish": "echo postpostpublish 22.3",
  "postpostpublishOnly": "echo postpostpublishOnly 23.3",
  "postprepack": "echo postprepack 18.3",
  "postprepare": "echo postprepare 16.3",
  "postprepublish": "echo postprepublish 15.3",
  "postprepublishOnly": "echo postprepublishOnly 17.3",
  "postpublish": "echo postpublish 22.2",
  "postpublishOnly": "echo postpublishOnly 23.2",
  "postrestart": "echo postrestart 2.3",
  "postshrinkwrap": "echo postshrinkwrap 24.3",
  "poststart": "echo poststart 0.3",
  "poststop": "echo poststop 3.3",
  "posttest": "echo posttest 6.3",
  "postuninstall": "echo postuninstall 8.3",
  "postversion": "echo postversion 25.3",
  "postyarn": "echo postyarn 13.3",
  "pre_myscript": "echo pre_myscript 27.1",
  "pre_myscript_": "echo pre_myscript_ 28.1",
  "prebuild": "echo prebuild 9.1",
  "preci": "echo preci 11.1",
  "precoverage": "echo precoverage 4.1",
  "predev": "echo predev 1.1",
  "preinstall": "echo preinstall 7.1",
  "prelerna": "echo prelerna 14.1",
  "prelink": "echo prelink 10.1",
  "prelint": "echo prelint 5.1",
  "premyscript": "echo premyscript 30.1",
  "premyscript:abc": "echo premyscript:abc 30.1",
  "premyscript_": "echo premyscript_ 29.1",
  "prenpm": "echo prenpm 12.1",
  "prepack": "echo prepack 20.1",
  "prepare": "echo prepare 16.2",
  "prepostpack": "echo prepostpack 20.1",
  "prepostpublish": "echo prepostpublish 22.1",
  "prepostpublishOnly": "echo prepostpublishOnly 23.1",
  "preprepack": "echo preprepack 18.1",
  "preprepare": "echo preprepare 16.1",
  "preprepublish": "echo preprepublish 15.1",
  "preprepublishOnly": "echo preprepublishOnly 17.1",
  "prepublish": "echo prepublish 22.1",
  "prepublishOnly": "echo prepublishOnly 23.1",
  "prerestart": "echo prerestart 2.1",
  "preshrinkwrap": "echo preshrinkwrap 24.1",
  "prestart": "echo prestart 0.1",
  "prestop": "echo prestop 3.1",
  "pretest": "echo pretest 6.1",
  "preuninstall": "echo preuninstall 8.1",
  "preversion": "echo preversion 25.1",
  "preyarn": "echo preyarn 13.1",
  "publish": "echo publish 22.2",
  "publishOnly": "echo publishOnly 23.2",
  "restart": "echo restart 2.2",
  "shrinkwrap": "echo shrinkwrap 24.2",
  "start": "echo start 0.2",
  "stop": "echo stop 3.2",
  "test": "echo test 6.2",
  "uninstall": "echo uninstall 8.2",
  "version": "echo version 25.2",
  "yarn": "echo yarn 13.2",
}
`;

exports[`should script lifecycle 2`] = `
Array [
  "prestart",
  "start",
  "poststart",
  "predev",
  "dev",
  "postdev",
  "prerestart",
  "restart",
  "postrestart",
  "prestop",
  "stop",
  "poststop",
  "precoverage",
  "coverage",
  "postcoverage",
  "prelint",
  "lint",
  "postlint",
  "pretest",
  "test",
  "posttest",
  "preinstall",
  "install",
  "postinstall",
  "preuninstall",
  "uninstall",
  "postuninstall",
  "prebuild",
  "build",
  "postbuild",
  "prelink",
  "link",
  "postlink",
  "preci",
  "ci",
  "postci",
  "prenpm",
  "npm",
  "postnpm",
  "preyarn",
  "yarn",
  "postyarn",
  "prelerna",
  "lerna",
  "postlerna",
  "preprepublish",
  "prepublish",
  "postprepublish",
  "preprepare",
  "prepare",
  "postprepare",
  "preprepublishOnly",
  "prepublishOnly",
  "postprepublishOnly",
  "preprepack",
  "prepack",
  "postprepack",
  "pack",
  "postpack",
  "prepostpack",
  "postpostpack",
  "publish",
  "postpublish",
  "prepostpublish",
  "postpostpublish",
  "prepostpublishOnly",
  "postpublishOnly",
  "postpostpublishOnly",
  "preshrinkwrap",
  "shrinkwrap",
  "postshrinkwrap",
  "preversion",
  "version",
  "postversion",
  "premyscript",
  "premyscript_",
  "premyscript:abc",
  "myscript",
  "myscript_",
  "_myscript",
  "_myscript_",
  "myscript:abc",
  "postmyscript",
  "postmyscript_",
  "postmyscript:abc",
  "pare",
  "postpare",
  "pre_myscript",
  "pre_myscript_",
  "post_myscript",
  "post_myscript_",
  "publishOnly",
]
`;

exports[`should script lifecycle 3`] = `
"{
  \\"prestart\\": \\"echo prestart 0.1\\",
  \\"start\\": \\"echo start 0.2\\",
  \\"poststart\\": \\"echo poststart 0.3\\",
  \\"predev\\": \\"echo predev 1.1\\",
  \\"dev\\": \\"echo dev 1.2\\",
  \\"postdev\\": \\"echo postdev 1.3\\",
  \\"prerestart\\": \\"echo prerestart 2.1\\",
  \\"restart\\": \\"echo restart 2.2\\",
  \\"postrestart\\": \\"echo postrestart 2.3\\",
  \\"prestop\\": \\"echo prestop 3.1\\",
  \\"stop\\": \\"echo stop 3.2\\",
  \\"poststop\\": \\"echo poststop 3.3\\",
  \\"precoverage\\": \\"echo precoverage 4.1\\",
  \\"coverage\\": \\"echo coverage 4.2\\",
  \\"postcoverage\\": \\"echo postcoverage 4.3\\",
  \\"prelint\\": \\"echo prelint 5.1\\",
  \\"lint\\": \\"echo lint 5.2\\",
  \\"postlint\\": \\"echo postlint 5.3\\",
  \\"pretest\\": \\"echo pretest 6.1\\",
  \\"test\\": \\"echo test 6.2\\",
  \\"posttest\\": \\"echo posttest 6.3\\",
  \\"preinstall\\": \\"echo preinstall 7.1\\",
  \\"install\\": \\"echo install 7.2\\",
  \\"postinstall\\": \\"echo postinstall 7.3\\",
  \\"preuninstall\\": \\"echo preuninstall 8.1\\",
  \\"uninstall\\": \\"echo uninstall 8.2\\",
  \\"postuninstall\\": \\"echo postuninstall 8.3\\",
  \\"prebuild\\": \\"echo prebuild 9.1\\",
  \\"build\\": \\"echo build 9.2\\",
  \\"postbuild\\": \\"echo postbuild 9.3\\",
  \\"prelink\\": \\"echo prelink 10.1\\",
  \\"link\\": \\"echo link 10.2\\",
  \\"postlink\\": \\"echo postlink 10.3\\",
  \\"preci\\": \\"echo preci 11.1\\",
  \\"ci\\": \\"echo ci 11.2\\",
  \\"postci\\": \\"echo postci 11.3\\",
  \\"prenpm\\": \\"echo prenpm 12.1\\",
  \\"npm\\": \\"echo npm 12.2\\",
  \\"postnpm\\": \\"echo postnpm 12.3\\",
  \\"preyarn\\": \\"echo preyarn 13.1\\",
  \\"yarn\\": \\"echo yarn 13.2\\",
  \\"postyarn\\": \\"echo postyarn 13.3\\",
  \\"prelerna\\": \\"echo prelerna 14.1\\",
  \\"lerna\\": \\"echo lerna 14.2\\",
  \\"postlerna\\": \\"echo postlerna 14.3\\",
  \\"preprepublish\\": \\"echo preprepublish 15.1\\",
  \\"prepublish\\": \\"echo prepublish 22.1\\",
  \\"postprepublish\\": \\"echo postprepublish 15.3\\",
  \\"preprepare\\": \\"echo preprepare 16.1\\",
  \\"prepare\\": \\"echo prepare 16.2\\",
  \\"postprepare\\": \\"echo postprepare 16.3\\",
  \\"preprepublishOnly\\": \\"echo preprepublishOnly 17.1\\",
  \\"prepublishOnly\\": \\"echo prepublishOnly 23.1\\",
  \\"postprepublishOnly\\": \\"echo postprepublishOnly 17.3\\",
  \\"preprepack\\": \\"echo preprepack 18.1\\",
  \\"prepack\\": \\"echo prepack 20.1\\",
  \\"postprepack\\": \\"echo postprepack 18.3\\",
  \\"pack\\": \\"echo pack 20.2\\",
  \\"postpack\\": \\"echo postpack 20.2\\",
  \\"prepostpack\\": \\"echo prepostpack 20.1\\",
  \\"postpostpack\\": \\"echo postpostpack 20.3\\",
  \\"publish\\": \\"echo publish 22.2\\",
  \\"postpublish\\": \\"echo postpublish 22.2\\",
  \\"prepostpublish\\": \\"echo prepostpublish 22.1\\",
  \\"postpostpublish\\": \\"echo postpostpublish 22.3\\",
  \\"prepostpublishOnly\\": \\"echo prepostpublishOnly 23.1\\",
  \\"postpublishOnly\\": \\"echo postpublishOnly 23.2\\",
  \\"postpostpublishOnly\\": \\"echo postpostpublishOnly 23.3\\",
  \\"preshrinkwrap\\": \\"echo preshrinkwrap 24.1\\",
  \\"shrinkwrap\\": \\"echo shrinkwrap 24.2\\",
  \\"postshrinkwrap\\": \\"echo postshrinkwrap 24.3\\",
  \\"preversion\\": \\"echo preversion 25.1\\",
  \\"version\\": \\"echo version 25.2\\",
  \\"postversion\\": \\"echo postversion 25.3\\",
  \\"premyscript\\": \\"echo premyscript 30.1\\",
  \\"premyscript_\\": \\"echo premyscript_ 29.1\\",
  \\"premyscript:abc\\": \\"echo premyscript:abc 30.1\\",
  \\"myscript\\": \\"echo myscript 30.2\\",
  \\"myscript_\\": \\"echo myscript_ 29.2\\",
  \\"_myscript\\": \\"echo _myscript 27.2\\",
  \\"_myscript_\\": \\"echo _myscript_ 28.2\\",
  \\"myscript:abc\\": \\"echo myscript:abc 30.2\\",
  \\"postmyscript\\": \\"echo postmyscript 30.3\\",
  \\"postmyscript_\\": \\"echo postmyscript_ 29.3\\",
  \\"postmyscript:abc\\": \\"echo postmyscript:abc 30.3\\",
  \\"pare\\": \\"echo pare 16.2\\",
  \\"postpare\\": \\"echo postpare 16.3\\",
  \\"pre_myscript\\": \\"echo pre_myscript 27.1\\",
  \\"pre_myscript_\\": \\"echo pre_myscript_ 28.1\\",
  \\"post_myscript\\": \\"echo post_myscript 27.3\\",
  \\"post_myscript_\\": \\"echo post_myscript_ 28.3\\",
  \\"publishOnly\\": \\"echo publishOnly 23.2\\"
}"
`;

exports[`sort base 1`] = `
Object {
  "multiply": "2 * 3",
  "postinstall": "echo \\"Installed\\"",
  "postprettier": "echo \\"so pretty\\"",
  "posttest": "abc",
  "pre-fetch-info": "foo",
  "prepare": "npm run build",
  "preprettier": "echo \\"not pretty\\"",
  "pretest": "xyz",
  "prettier": "prettier -l \\"**/*.js\\"",
  "prewatch": "echo \\"about to watch\\"",
  "start": "node server.js",
  "test": "node test.js",
  "watch": "watch things",
}
`;

exports[`sort base 2`] = `
Array [
  "start",
  "pretest",
  "test",
  "posttest",
  "postinstall",
  "prepare",
  "multiply",
  "preprettier",
  "prettier",
  "postprettier",
  "pre-fetch-info",
  "prewatch",
  "watch",
]
`;

exports[`sort base 3`] = `
"{
  \\"start\\": \\"node server.js\\",
  \\"pretest\\": \\"xyz\\",
  \\"test\\": \\"node test.js\\",
  \\"posttest\\": \\"abc\\",
  \\"postinstall\\": \\"echo \\\\\\"Installed\\\\\\"\\",
  \\"prepare\\": \\"npm run build\\",
  \\"multiply\\": \\"2 * 3\\",
  \\"preprettier\\": \\"echo \\\\\\"not pretty\\\\\\"\\",
  \\"prettier\\": \\"prettier -l \\\\\\"**/*.js\\\\\\"\\",
  \\"postprettier\\": \\"echo \\\\\\"so pretty\\\\\\"\\",
  \\"pre-fetch-info\\": \\"foo\\",
  \\"prewatch\\": \\"echo \\\\\\"about to watch\\\\\\"\\",
  \\"watch\\": \\"watch things\\"
}"
`;

exports[`sort base v2 1`] = `
Object {
  "_postprettier": "echo \\"so pretty\\"",
  "multiply": "2 * 3",
  "postinstall": "echo \\"Installed\\"",
  "posttest": "abc",
  "pre-fetch-info": "foo",
  "prepare": "npm run build",
  "preprettier_": "echo \\"not pretty\\"",
  "pretest": "xyz",
  "prettier_": "prettier -l \\"**/*.js\\"",
  "prewatch": "echo \\"about to watch\\"",
  "start": "node server.js",
  "test": "node test.js",
  "watch": "watch things",
}
`;

exports[`sort base v2 2`] = `
Array [
  "start",
  "pretest",
  "test",
  "posttest",
  "postinstall",
  "prepare",
  "preprettier_",
  "prettier_",
  "_postprettier",
  "multiply",
  "pre-fetch-info",
  "prewatch",
  "watch",
]
`;

exports[`sort base v2 3`] = `
"{
  \\"start\\": \\"node server.js\\",
  \\"pretest\\": \\"xyz\\",
  \\"test\\": \\"node test.js\\",
  \\"posttest\\": \\"abc\\",
  \\"postinstall\\": \\"echo \\\\\\"Installed\\\\\\"\\",
  \\"prepare\\": \\"npm run build\\",
  \\"preprettier_\\": \\"echo \\\\\\"not pretty\\\\\\"\\",
  \\"prettier_\\": \\"prettier -l \\\\\\"**/*.js\\\\\\"\\",
  \\"_postprettier\\": \\"echo \\\\\\"so pretty\\\\\\"\\",
  \\"multiply\\": \\"2 * 3\\",
  \\"pre-fetch-info\\": \\"foo\\",
  \\"prewatch\\": \\"echo \\\\\\"about to watch\\\\\\"\\",
  \\"watch\\": \\"watch things\\"
}"
`;

exports[`sort yarn-tool scripts 1`] = `
Object {
  "coverage": "npx nyc yarn run test",
  "lint": "npx eslint **/*.ts",
  "ncu": "npx yarn-tool ncu -u",
  "npm:publish": "npm publish",
  "postpublish_": "git commit -m \\"chore(release): publish\\" .",
  "prepublish:lockfile": "npx sync-lockfile .",
  "prepublishOnly_": "yarn run ncu && yarn run sort-package-json && yarn run test",
  "sort-package-json": "npx yarn-tool sort",
  "test": "echo \\"Error: no test specified\\" && exit 1",
  "test:mocha": "npx mocha --require ts-node/register \\"!(node_modules)/**/*.{test,spec}.{ts,tsx}\\"",
  "tsc:default": "tsc -p tsconfig.json",
  "tsc:esm": "tsc -p tsconfig.esm.json",
}
`;

exports[`sort yarn-tool scripts 2`] = `
Array [
  "coverage",
  "lint",
  "test",
  "test:mocha",
  "npm:publish",
  "prepublish:lockfile",
  "prepublishOnly_",
  "postpublish_",
  "ncu",
  "sort-package-json",
  "tsc:default",
  "tsc:esm",
]
`;

exports[`sort yarn-tool scripts 3`] = `
"{
  \\"coverage\\": \\"npx nyc yarn run test\\",
  \\"lint\\": \\"npx eslint **/*.ts\\",
  \\"test\\": \\"echo \\\\\\"Error: no test specified\\\\\\" && exit 1\\",
  \\"test:mocha\\": \\"npx mocha --require ts-node/register \\\\\\"!(node_modules)/**/*.{test,spec}.{ts,tsx}\\\\\\"\\",
  \\"npm:publish\\": \\"npm publish\\",
  \\"prepublish:lockfile\\": \\"npx sync-lockfile .\\",
  \\"prepublishOnly_\\": \\"yarn run ncu && yarn run sort-package-json && yarn run test\\",
  \\"postpublish_\\": \\"git commit -m \\\\\\"chore(release): publish\\\\\\" .\\",
  \\"ncu\\": \\"npx yarn-tool ncu -u\\",
  \\"sort-package-json\\": \\"npx yarn-tool sort\\",
  \\"tsc:default\\": \\"tsc -p tsconfig.json\\",
  \\"tsc:esm\\": \\"tsc -p tsconfig.esm.json\\"
}"
`;

exports[`sort yarn-tool scripts 4`] = `
Object {
  "_postpublish_": "git commit -m \\"chore(release): publish\\" .",
  "_prepublishOnly:": "yarn run ncu && yarn run sort-package-json && yarn run test",
  "coverage": "npx nyc yarn run test",
  "lint": "npx eslint **/*.ts",
  "ncu": "npx yarn-tool ncu -u",
  "npm:publish": "npm publish",
  "prepublish:lockfile": "npx sync-lockfile .",
  "sort-package-json": "npx yarn-tool sort",
  "test-": "echo \\"Error: no test specified\\" && exit 1",
  "test:mocha": "npx mocha --require ts-node/register \\"!(node_modules)/**/*.{test,spec}.{ts,tsx}\\"",
  "tsc:default": "tsc -p tsconfig.json",
  "tsc:esm": "tsc -p tsconfig.esm.json",
}
`;

exports[`sort yarn-tool scripts 5`] = `
Array [
  "coverage",
  "lint",
  "test-",
  "test:mocha",
  "npm:publish",
  "prepublish:lockfile",
  "_prepublishOnly:",
  "_postpublish_",
  "ncu",
  "sort-package-json",
  "tsc:default",
  "tsc:esm",
]
`;

exports[`sort yarn-tool scripts 6`] = `
"{
  \\"coverage\\": \\"npx nyc yarn run test\\",
  \\"lint\\": \\"npx eslint **/*.ts\\",
  \\"test-\\": \\"echo \\\\\\"Error: no test specified\\\\\\" && exit 1\\",
  \\"test:mocha\\": \\"npx mocha --require ts-node/register \\\\\\"!(node_modules)/**/*.{test,spec}.{ts,tsx}\\\\\\"\\",
  \\"npm:publish\\": \\"npm publish\\",
  \\"prepublish:lockfile\\": \\"npx sync-lockfile .\\",
  \\"_prepublishOnly:\\": \\"yarn run ncu && yarn run sort-package-json && yarn run test\\",
  \\"_postpublish_\\": \\"git commit -m \\\\\\"chore(release): publish\\\\\\" .\\",
  \\"ncu\\": \\"npx yarn-tool ncu -u\\",
  \\"sort-package-json\\": \\"npx yarn-tool sort\\",
  \\"tsc:default\\": \\"tsc -p tsconfig.json\\",
  \\"tsc:esm\\": \\"tsc -p tsconfig.esm.json\\"
}"
`;
